# airsim-integration

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  basic-tutorial-1.c  setup-gazebo.sh
camera/receive/linux/src/: udp-cam-receive.cpp
camera/send/: CMakeLists.txt
gazebo/: CMakeLists.txt  udp_sender.cpp
gazebo/airsim/: CMakeLists.txt
gazebo/airsim/src/: receive_drone_pose.cpp
gazebo/gazebo/: CMakeLists.txt
gazebo/gazebo/src/: send_drone_pose.cpp
gazebo/src/: drone_pose.cpp  net_endian.hpp  pose.hpp  send_drone_pose.cpp  udp_receiver.cpp  udp_receiver.hpp  udp_sender.cpp  udp_sender.hpp
pose/airsim/: CMakeLists.txt
pose/airsim/pose_handlers/: CMakeLists.txt  pose_handlers.cpp  pose_handlers.hpp
pose/airsim/receive_drone_pose/: CMakeLists.txt  pose_handlers.cpp  pose_handlers.hpp  receive_drone_pose.cpp
pose/airsim/src/: receive_drone_pose.cpp
pose/airsim/test/: CMakeLists.txt  test_pose_handlers.cpp  test_vehicle_pose.hpp
pose/airsim/vehicle_pose/: CMakeLists.txt  airsim_pose.cpp  airsim_pose.hpp  vehicle_pose.hpp
pose/gazebo/: CMakeLists.txt
pose/gazebo/gazebo_drone_pose/: CMakeLists.txt  gazebo_drone_pose.cpp  gazebo_drone_pose.hpp
pose/gazebo/send_drone_pose/: CMakeLists.txt
pose/gazebo/src/: gazebo_drone_pose.cpp  gazebo_drone_pose.hpp  send_drone_pose.cpp  send_drone_pose_pi.hpp
pose/gazebo/src/test/: test_send_drone_pose.cpp
pose/gazebo/test/: CMakeLists.txt  test_gazebo_drone_pose.cpp
pose/pose_send_receive/: CMakeLists.txt  net_endian.hpp  pose.hpp  pose_receiver.hpp  pose_sender.hpp  udp_receiver.cpp  udp_receiver.hpp  udp_sender.cpp  udp_sender.hpp
pose/src/: pose.hpp  udp_receiver.cpp  udp_receiver.hpp  udp_sender.cpp  udp_sender.hpp
pose/test/: test_udp_sender.hpp
pose/test/pose_send_receive/: test_pose_sender.hpp  test_udp_sender.hpp
receive/jetson/: udp-cam-receive-jetson.cpp
send/: CMakeLists.txt
src/: airsim-cam-send.cpp  decode-wav.c  integrated-cam.c  udp-cam-enc-test.c  udp-cam-receive-jetson.c  udp-cam-receive-jetson.cpp  udp-cam-receive.c  udp-cam-receive.cpp  udp-cam-send.c
